cabal-version:   2.4
name:            financial-functions
version:         0.0.0.0
synopsis:        Port of numpy-financial
description:     Port of numpy-financial
homepage:        https://github.com/befunctional/financial-functions
bug-reports:     https://github.com/befunctional/financial-functions/issues
license:         MIT
license-file:    LICENSE
author:          o1lo01ol1o
maintainer:      o1lo01ol1o <repos@befunctional.io>
copyright:       2020 o1lo01ol1o
category:        Math
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==8.6.5 || ==8.8.3

source-repository head
  type:     git
  location: https://github.com/befunctional/financial-functions.git

common common-options
  build-depends:    base >=4.12.0.0 && <4.19
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Numeric.Financial
  build-depends:
    , ad
    , data-default-class
    , math-functions

test-suite financial-functions-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , financial-functions
    , QuickCheck
    , tasty
    , tasty-quickcheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite financial-functions-doctest
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Doctest.hs
  build-depends:
    , doctest
    , financial-functions

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark financial-functions-benchmark
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        Main.hs
  build-depends:
    , financial-functions
    , gauge

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
